syntax = "proto3";

package programming_lab.prolab_accounts;

option go_package = "github.com/ProgrammingLab/prolab-accounts/api;api_pb";


import "google/api/annotations.proto";
import "google/protobuf/empty.proto";

import "sessions.proto";

service PasswordResetService {
  rpc GetPasswordReset (GetPasswordResetRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      get: "/password_resets/{token}"
    };
  }
  rpc CreatePasswordReset (CreatePasswordResetRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      post: "/password_resets"
      body: "*"
    };
  }
  rpc UpdatePassword (UpdatePasswordRequest) returns (Session) {
    option (google.api.http) = {
      patch: "/password_resets/{token}"
      body: "*"
    };
  }
}

message GetPasswordResetRequest {
  string token = 1;
  string email = 2;
}

message CreatePasswordResetRequest {
  string email = 1;
}

message UpdatePasswordRequest {
  string token = 1;
  string email = 2;
  string new_password = 3;
}
